--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.4",
-    "typescript": "5.5.2",
+    "typescript": "^5.5.4",
     "use-debounce": "^10.0.1",
+    "vercel": "^36.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.14.8",
-    "@types/react": "18.3.3",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "18.3.0"
   },
   "engines": {
