--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -13,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.5",
-    "next-auth": "5.0.0-beta.19",
+    "next-auth": "5.0.0-beta.20",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -27,7 +28,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.14.8",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5"
   },
   "engines": {
     "node": ">=18.17.0"
